--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Lint code
       run: |
-        flake8 ./lab3 --count --statistics --show-source
+        flake8 . --count --statistics --show-source
 
     - name: Test with pytest
       run: |
